@@ -95,6 +95,15 @@ appropriate support is not present, files are treated as plain text. The
 standard input is always so treated.
 .
 .
+.SH "BINARY FILES"
+.rs
+.sp
+By default, a file that contains a binary zero byte within the first 1024 bytes 
+is identified as a binary file, and is processed specially. (GNU grep also
+identifies binary files in this manner.) See the \fB--binary-files\fP option
+for a means of changing the way binary files are handled.
+.
+.
 .SH OPTIONS
 .rs
 .sp
@@ -117,6 +126,10 @@ group of lines, unless they are in fact contiguous in the input file. The value
 of \fInumber\fP is expected to be relatively small. However, \fBpcregrep\fP
 guarantees to have up to 8K of following text available for context output.
 .TP
+\fB-a\fP, \fB--text\fP
+Treat binary files as text. This is equivalent to
+\fB--binary-files\fP=\fItext\fP.
+.TP
 \fB-B\fP \fInumber\fP, \fB--before-context=\fP\fInumber\fP
 Output \fInumber\fP lines of context before each matching line. If filenames
 and/or line numbers are being output, a hyphen separator is used instead of a
@@ -124,6 +137,17 @@ colon for the context lines. A line containing "--" is output between each
 group of lines, unless they are in fact contiguous in the input file. The value
 of \fInumber\fP is expected to be relatively small. However, \fBpcregrep\fP
 guarantees to have up to 8K of preceding text available for context output.
+.TP
+\fB--binary-files=\fP\fIword\fP
+Specify how binary files are to be processed. If the word is "binary" (the 
+default), pattern matching is performed on binary files, but the only output is
+"Binary file <name> matches" when a match succeeds. If the word is "text",
+which is equivalent to the \fB-a\fP or \fB--text\fP option, binary files are
+processed in the same way as any other file. In this case, when a match
+succeeds, the output may be binary garbage, which can have nasty effects if
+sent to a terminal. If the word is "without-match", which is equivalent to the
+\fB-I\fP option, binary files are not processed at all; they are assumed not to
+be of interest.
 .TP
 \fB--buffer-size=\fP\fInumber\fP
 Set the parameter that controls how much memory is used for buffering files
@@ -264,6 +288,10 @@ If a line number is also being output, it follows the file name.
 \fB--help\fP
 Output a help message, giving brief details of the command options and file
 type support, and then exit.
+.TP
+\fB-I\fP
+Treat binary files as never matching. This is equivalent to
+\fB--binary-files\fP=\fIwithout-match\fP.
 .TP
 \fB-i\fP, \fB--ignore-case\fP
 Ignore upper/lower case distinctions during comparisons.
@@ -493,7 +521,7 @@ convert this to an appropriate sequence if the output is sent to a file.
 .rs
 .sp
 Many of the short and long forms of \fBpcregrep\fP's options are the same
-as in the GNU \fBgrep\fP program (version 2.5.4). Any long option of the form
+as in the GNU \fBgrep\fP program. Any long option of the form
 \fB--xxx-regexp\fP (GNU terminology) is also available as \fB--xxx-regex\fP
 (PCRE terminology). However, the \fB--file-list\fP, \fB--file-offsets\fP,
 \fB--include-dir\fP, \fB--line-offsets\fP, \fB--locale\fP, \fB--match-limit\fP,
@@ -588,6 +616,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 28 February 2012
+Last updated: 04 March 2012
 Copyright (c) 1997-2012 University of Cambridge.
 .fi
